fixed overflow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -150,8 +150,8 @@ input {
     width: 90%;
     margin: 0 auto;
     margin-top: 5rem;
-    overflow: scroll;
     max-height: 60vh;
+    overflow: auto;
 
 }
 
